# tarm-io

./: .gitignore  CMakeLists.txt  Client.cpp  LICENSE.txt  README.md  Server.cpp
CMakeModules/: CodeCoverage.cmake  FindLibUV.cmake  (+1 more)
doc/: conf.py  (+9 more)
examples/: CMakeLists.txt
examples/hello_event_loop/: CMakeLists.txt  main.cpp
examples/samples/: CMakeLists.txt  Client.cpp  Server.cpp
examples/udp_echo_server/: CMakeLists.txt  main.cpp
examples/very_basic_udp_echo_server/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt  ioConfig.cmake.in  tarm-ioConfig.cmake.in
source/io/: Allocator.cpp  Allocator.h  BacklogWithTimeout.h  BufferSizeResult.h  ByteSwap.cpp  ByteSwap.h  CodecvtErrorCategory.cpp  Common.cpp  Common.h  CommonMacros.h  Continuation.h  Convert.cpp  Convert.h  DataChunk.h  Dir.cpp  Dir.h  DirectoryEntryType.h  Disposable.cpp  Disposable.h  DtlsClient.cpp  DtlsClient.h  DtlsConnectedClient.cpp  DtlsConnectedClient.h  DtlsServer.cpp  DtlsServer.h  DtlsVersion.h  Endpoint.cpp  Endpoint.h  Error.cpp  Error.h  EventLoop.cpp  EventLoop.h  Export.h  File.cpp  File.h  Forward.h  HashRange.h  Logger.cpp  Logger.h  Path.cpp  (+42 more)
source/io/core/: VariableLengthSize.cpp  VariableLengthSize.h
source/io/detail/: Common.cpp  Common.h  ConstexprString.h  DtlsContext.h  EventLoopHelpers.h  LibuvCompatibility.cpp  LibuvCompatibility.h  LogMacros.h  OpenSslClientImplBase.h  OpenSslContext.h  OpenSslInitHelper.cpp  PeerId.cpp  PeerId.h  RawBufferGetter.h  TcpClientImplBase.h  TlsContext.h  TlsTcpClientImplBase.h  UdpClientImplBase.h  UdpImplBase.h  VariableLengthSize.cpp  VariableLengthSize.h
source/io/detail/net/: OpenSslClientImplBase.h  OpenSslInitHelper.cpp  PeerId.cpp  TcpClientImplBase.h  TlsContext.h  UdpImplBase.h
source/io/fs/: Dir.cpp  Dir.h  DirectoryEntryType.h  File.cpp  File.h  Functions.cpp  Functions.h  Path.cpp  Path.h  StatData.cpp  StatData.h
source/io/fs/detail/: FsCommon.h
source/io/fs/path_impl/: CodecvtErrorCategory.cpp  HashRange.cpp  HashRange.h  PathTraits.cpp  PathTraits.h  QuotedManip.h  Utf8CodecvtFacet.cpp  Utf8CodecvtFacet.h  WindowsFileCodecvt.h
source/io/global/: Configuration.cpp  Configuration.h  Version.cpp  Version.h
source/io/net/: BufferSizeResult.h  Dns.cpp  Dns.h  Dtls.h  DtlsClient.cpp  DtlsClient.h  DtlsConnectedClient.cpp  DtlsConnectedClient.h  DtlsServer.cpp  DtlsServer.h  DtlsVersion.h  Endpoint.cpp  Endpoint.h  GenericMessageOrientedClient.h  GenericMessageOrientedClientBase.h  GenericMessageOrientedConnectedClient.h  GenericMessageOrientedServer.h  ProtocolVersion.cpp  ProtocolVersion.h  Tcp.h  TcpClient.cpp  TcpClient.h  TcpConnectedClient.cpp  TcpConnectedClient.h  TcpServer.cpp  TcpServer.h  Tls.h  TlsClient.cpp  TlsClient.h  TlsConnectedClient.cpp  TlsConnectedClient.h  TlsServer.cpp  TlsServer.h  TlsTcpClient.cpp  TlsTcpClient.h  TlsTcpConnectedClient.cpp  TlsTcpConnectedClient.h  TlsTcpServer.cpp  TlsTcpServer.h  TlsVersion.h  (+7 more)
source/io/net/detail/: DtlsContext.h  OpenSslClientImplBase.h  OpenSslContext.h  PeerId.h  TcpClientImplBase.h  UdpClientImplBase.h  UdpImplBase.h
source/io/path_impl/: CodecvtErrorCategory.cpp  HashRange.cpp  HashRange.h  PathTraits.cpp  PathTraits.h  QuotedManip.h  Utf8CodecvtFacet.cpp  Utf8CodecvtFacet.h  WindowsFileCodecvt.cpp  WindowsFileCodecvt.h
tests/: BacklogWithTimeoutTest.cpp  ByteSwapTest.cpp  CMakeLists.txt  CommonTest.cpp  ConfigurationTest.cpp  ConstexprStringTest.cpp  ConvertTest.cpp  DirTest.cpp  DisposableTest.cpp  DnsTest.cpp  DtlsClientServerTest.cpp  EndpointTest.cpp  ErrorTest.cpp  EventLoopTest.cpp  FileTest.cpp  FunctionsTest.cpp  GenericMessageOrientedClientServerTest.cpp  LogRedirector.cpp  LogRedirector.h  LoggerTest.cpp  Main.cpp  PathTest.cpp  ProtoclVersionTest.cpp  RefCountedTest.cpp  RemovableTest.cpp  ResolveBoost.cmake  ResolveGTest.cmake  ScopeExitGuardTest.cpp  TcpClientServerTest.cpp  TimerTest.cpp  TlsClientServerTest.cpp  TlsTcpClientServerTest.cpp  UTCommon.cpp  UTCommon.h  UdpClientServerTest.cpp  UserDataHolderTest.cpp  VariableLengthSizeTest.cpp  VersionTest.cpp
tests/data/: certificate.pem  invalid_certificate.pem  not_matching_certificate.pem  not_matching_key.pem
tests/docker/: alpine3.9.6-gcc8.3.0  alpine3.9.6-gcc8.3.0-boost1.67  alpine3.9.6-gcc8.3.0-boost1.67-cmake3.13.0  alpine3.9.6-gcc8.3.0-boost1.67-cmake3.13.0-gtest1.8.1  alpine3.9.6-gcc8.3.0-boost1.67-cmake3.13.0-gtest1.8.1-openssl1.1.1g  alpine3.9.6-gcc8.3.0-boost1.67-cmake3.13.0-gtest1.8.1-openssl1.1.1g-ninja1.8.2  build_all_images.bash  build_all_libuv_versions.bash  build_all_openssl_versions.bash  build_single_image.bash  build_single_libuv_version.bash  build_single_openssl_version.bash  centos7.6.1810-gcc4.8.5  centos7.6.1810-gcc4.8.5-boost1.70  centos7.6.1810-gcc4.8.5-boost1.70-cmake3.15.6  centos7.6.1810-gcc4.8.5-boost1.70-cmake3.15.6-gtest1.8.1  centos7.6.1810-gcc4.8.5-boost1.70-cmake3.15.6-gtest1.8.1-openssl.template  centos7.6.1810-gcc4.8.5-boost1.70-cmake3.15.6-gtest1.8.1-openssl1.0.2k  centos7.6.1810-gcc4.8.5-boost1.70-cmake3.15.6-gtest1.8.1-openssl1.1.0-ninja1.10.0  env.bash  execute_in_docker.bash  push_all_images.bash  sphinx-docs  ubuntu14.04-gcc4.8.4  ubuntu14.04-gcc4.8.4-boost1.55  ubuntu14.04-gcc4.8.4-boost1.55-cmake3.10.3  ubuntu14.04-gcc4.8.4-boost1.55-cmake3.10.3-gtest1.10.0  ubuntu14.04-gcc4.8.4-boost1.55-cmake3.10.3-gtest1.10.0-openssl1.0.1f  ubuntu14.04-gcc4.8.4-boost1.55-cmake3.10.3-gtest1.10.0-openssl1.0.1f-ninja1.3.4  ubuntu14.04-gcc4.8.4-boost1.55-cmake3.10.3-gtest1.10.0-openssl1.0.1f-valgrind3.16.0  ubuntu14.04-gcc4.8.4-boost1.55-cmake3.10.3-gtest1.10.0-openssl1.1.1g  ubuntu14.04-gcc4.8.4-boost1.55-cmake3.10.3-gtest1.10.0-openssl1.1.1g-valgrind3.16.0  ubuntu16.04-gcc5.4.0  ubuntu16.04-gcc5.4.0-boost1.70  ubuntu16.04-gcc5.4.0-boost1.70-cmake3.5.1  ubuntu16.04-gcc5.4.0-boost1.70-cmake3.5.1-gtest1.8.1  ubuntu16.04-gcc5.4.0-boost1.70-cmake3.5.1-gtest1.8.1-openssl1.0.2g  ubuntu16.04-gcc5.4.0-boost1.70-cmake3.5.1-gtest1.8.1-openssl1.0.2g-libuv.template  ubuntu16.04-gcc5.4.0-boost1.70-cmake3.5.1-gtest1.8.1-openssl1.0.2g-ninja1.5.1  ubuntu18.04-gcc7.5.0  (+24 more)
(+64 files in other folders)
